<resources>
    <string name="app_name">ZeroContact</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="text_near_friends">near friends</string>
    <string name="text_favorite">favorite</string>
    <string name="text_my_profile">my profile</string>
    <string name="text_settings">settings</string>

    <string name="user_name_text">名前</string>
    <string name="user_hobby_text">趣味</string>
    <string name="user_comment_text">一言コメント</string>
    <string name="user_detail_button_text">さんをもっと見る</string>

    <string name="title_near_friends_text">近くの人達</string>
    <string name="title_favorite_text">あなたが出会った人々</string>
    <string name="title_profile_text">プロフィール</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_friend">FriendActivity</string>

    <string name="text_search"><u>詳細検索</u></string>

    <string-array name="user_list">
        <item>Osanai Hogehoge</item>
        <item>Kazama Hugahuga</item>
        <item>Sasaki Hogehoge</item>
        <item>Kudo Hugahuga</item>
        <item>Yamada Hogehoge</item>
        <item>Kato Hugahuga</item>
        <item>Osanai Hogehoge</item>
        <item>Kazama Hugahuga</item>
        <item>Sasaki Hogehoge</item>
        <item>Kudo Hugahuga</item>
        <item>Yamada Hogehoge</item>
        <item>Kato Hugahuga</item>
        <item>Osanai Hogehoge</item>
        <item>Kazama Hugahuga</item>
        <item>Sasaki Hogehoge</item>
        <item>Kudo Hugahuga</item>
        <item>Yamada Hogehoge</item>
        <item>Kato Hugahuga</item>
        <item>Osanai Hogehoge</item>
        <item>Kazama Hugahuga</item>
        <item>Sasaki Hogehoge</item>
        <item>Kudo Hugahuga</item>
        <item>Yamada Hogehoge</item>
        <item>Kato Hugahuga</item>
    </string-array>

    <!--ソートに使うリスト-->
    <string-array name="sort_list">
        <item>並べ替え</item>
        <item>五十音順</item>
        <item>日時順</item>
        <item>会った回数順</item>
    </string-array>

    <string-array name="favorite_list1">
        <item>趣味</item>
        <item>スポーツ</item>
        <item>映画鑑賞</item>
        <item>音楽</item>
        <item>アニメ</item>
        <item>読書</item>
        <item>将棋</item>
    </string-array>

    <string-array name="favorite_list2">
        <item>出会った場所</item>
        <item>学会</item>
        <item>授業</item>
        <item>スポーツ観戦</item>
        <item>合コン</item>
    </string-array>

    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string-array name="distance_array">
        <item>Immediate</item>
        <item>Near</item>
        <item>Far</item>

    </string-array>

</resources>

