<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/near_friends"
            android:icon="@drawable/ic_face_normal_24dp"
            android:title="@string/text_near_friends" />
        <item
            android:id="@+id/favorites"
            android:icon="@drawable/ic_favorite_normal_24dp"
            android:title="@string/text_favorite" />
        <item
            android:id="@+id/my_profile"
            android:icon="@drawable/ic_account_circle_normal_24dp"
            android:title="@string/text_my_profile" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_normal_24dp"
            android:title="@string/text_settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
